[package]
name = "token-bucket-rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
futures-core = "0.3.26"
pin-project = "1.0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "buffer"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }